# danek

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conanfile.txt
.github/workflows/: ci.yml  codeql.yml
cmake/: ClangFormat.cmake  Compiler.cmake  Coverage.cmake  CppCheck.cmake  CppCheck.suppressions  DefaultSecurity.cfg  Options.cmake  Templates.cmake
cmake/template/: DefaultSecurity.cpp.in  PlatformConfig.cpp.in
demos/: .gitignore  CMakeLists.txt
demos/common/: FooConfigurationException.h
demos/encapsulate-lookup-api/: CMakeLists.txt  FallbackConfiguration.h  FooConfiguration.cpp  FooConfiguration.h  README.md  main.cpp
demos/extended-schema-validator/: CMakeLists.txt  ExtendedSchemaValidator.h  FooConfiguration.cpp  FooConfiguration.h  README.md  SchemaTypeHex.cpp  SchemaTypeHex.h  main.cpp
demos/log-level/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  FooConfiguration.cpp  FooConfiguration.h  Logger.cpp  Logger.h  README.md  main.cpp
demos/recipes/: CMakeLists.txt  README.md  RecipeFileParser.cpp  RecipeFileParser.h  RecipeFileParserException.h  main.cpp
demos/simple-encapsulation/: .gitignore  CMakeLists.txt  FallbackConfiguration.h  FooConfiguration.cpp  FooConfiguration.h  README.md  main.cpp
include/config4cpp/: Configuration.h  ConfigurationException.h  SchemaType.h  SchemaValidator.h  StringBuffer.h  StringVector.h  namespace.h
include/danek/: ConfType.h  Configuration.h  ConfigurationException.h  PatternMatch.h  SchemaType.h  SchemaValidator.h  StringBuffer.h  StringVector.h
include/danek/internal/: Common.h  Compat.h  ConfigItem.h  ConfigLex.h  ConfigParser.h  ConfigScope.h  ConfigScopeEntry.h  ConfigurationImpl.h  DefaultSecurity.h  DefaultSecurityConfiguration.h  FunctionType.h  LexBase.h  LexBaseSymbols.h  LexToken.h  MBChar.h  SchemaIdRuleInfo.h  SchemaIgnoreRuleInfo.h  SchemaLex.h  SchemaParser.h  SchemaRuleInfo.h  SchemaTypeBoolean.h  SchemaTypeDummy.h  SchemaTypeDurationMicroseconds.h  SchemaTypeDurationMilliseconds.h  SchemaTypeDurationSeconds.h  SchemaTypeEnum.h  SchemaTypeFloat.h  SchemaTypeFloatWithUnits.h  SchemaTypeInt.h  SchemaTypeIntWithUnits.h  SchemaTypeList.h  SchemaTypeMemorySizeBytes.h  SchemaTypeMemorySizeKB.h  SchemaTypeMemorySizeMB.h  SchemaTypeScope.h  SchemaTypeString.h  SchemaTypeTable.h  SchemaTypeTuple.h  SchemaTypeTypedef.h  SchemaTypeUnitsWithFloat.h  (+7 more)
include/danek/internal/platform/: Platform.h
licenses/: LICENCE.txt
script/: ci_build.sh  ci_install.sh  ci_install_deps.sh  ci_travis_clang_workaround.sh  travis_install.sh
src/: CMakeLists.txt  Common.h  Config2Cpp.cpp  Config2Cpp.h  ConfigItem.cpp  ConfigItem.h  ConfigLex.cpp  ConfigLex.h  ConfigParser.cpp  ConfigParser.h  ConfigScope.cpp  ConfigScope.h  ConfigScopeEntry.cpp  ConfigScopeEntry.h  Configuration.cpp  ConfigurationException.cpp  ConfigurationImpl.cpp  ConfigurationImpl.h  DefaultSecurity.cpp  DefaultSecurity.h  DefaultSecurityConfiguration.cpp  DefaultSecurityConfiguration.h  LexBase.cpp  LexBase.h  LexToken.cpp  LexToken.h  MBChar.cpp  MBChar.h  SchemaLex.cpp  SchemaLex.h  SchemaParser.cpp  SchemaParser.h  SchemaRuleInfo.h  SchemaType.cpp  SchemaTypeBoolean.cpp  SchemaTypeBoolean.h  SchemaTypeDummy.h  SchemaTypeDurationMicroseconds.cpp  SchemaTypeDurationMicroseconds.h  SchemaTypeDurationMilliseconds.cpp  (+48 more)
src/danek/: CMakeLists.txt  ConfigItem.cpp  ConfigLex.cpp  ConfigLex.h  ConfigParser.cpp  ConfigParser.h  ConfigScope.cpp  ConfigScopeEntry.cpp  Configuration.cpp  ConfigurationException.cpp  ConfigurationImpl.cpp  DefaultSecurity.cpp  DefaultSecurityConfiguration.cpp  LexBase.cpp  LexToken.cpp  LexToken.h  MBChar.cpp  PatternMatch.cpp  SchemaLex.cpp  SchemaParser.cpp  SchemaRuleInfo.h  SchemaType.cpp  SchemaTypeBoolean.cpp  SchemaTypeBoolean.h  SchemaTypeDurationMicroseconds.cpp  SchemaTypeDurationMicroseconds.h  SchemaTypeDurationMilliseconds.cpp  SchemaTypeDurationSeconds.cpp  SchemaTypeEnum.cpp  SchemaTypeFloat.cpp  SchemaTypeFloatWithUnits.cpp  SchemaTypeInt.cpp  SchemaTypeIntWithUnits.cpp  SchemaTypeList.cpp  SchemaTypeMemorySizeBytes.cpp  SchemaTypeMemorySizeKB.cpp  SchemaTypeMemorySizeMB.cpp  SchemaTypeScope.cpp  SchemaTypeString.cpp  SchemaTypeTable.cpp  (+13 more)
src/danek/internal/: CMakeLists.txt  ConfigItem.cpp  ConfigLex.cpp  ConfigParser.cpp  ConfigScope.cpp  ConfigurationImpl.cpp  DefaultSecurityConfiguration.cpp  LexBase.cpp  LexToken.cpp  MBChar.cpp  SchemaLex.cpp  SchemaParser.cpp  SchemaTypeBoolean.cpp  SchemaTypeDurationMicroseconds.cpp  SchemaTypeDurationMilliseconds.cpp  SchemaTypeDurationSeconds.cpp  SchemaTypeEnum.cpp  SchemaTypeFloat.cpp  SchemaTypeFloatWithUnits.cpp  SchemaTypeInt.cpp  SchemaTypeIntWithUnits.cpp  SchemaTypeList.cpp  SchemaTypeMemorySizeBytes.cpp  SchemaTypeMemorySizeKB.cpp  SchemaTypeMemorySizeMB.cpp  SchemaTypeScope.cpp  SchemaTypeString.cpp  SchemaTypeTable.cpp  SchemaTypeTuple.cpp  SchemaTypeTypedef.cpp  SchemaTypeUnitsWithFloat.cpp  SchemaTypeUnitsWithInt.cpp  ToString.cpp  UidIdentifierProcessor.cpp  Util.cpp  platform.cpp
src/danek/internal/platform/: CMakeLists.txt  Platform.cpp  Unix.cpp  Windows.cpp
src/tools/: CMakeLists.txt  Config2Cpp.cpp  Config2Cpp.h  config2cpp-main.cpp  config2cpp-nocheck-main.cpp  config4cpp.cpp
test/: CMakeLists.txt  ConfigItemTest.cpp  ConfigScopeEntryTest.cpp  ConfigScopeTest.cpp  ConfigurationExceptionTest.cpp  LexTokenTest.cpp  PlatformTest.cpp  SchemaRuleInfoTest.cpp  SchemaValidatorTest.cpp  StringBufferTest.cpp  StringVectorTest.cpp  ToStringTest.cpp  UidIdentifierDummyProcessorTest.cpp  UidIdentifierProcessorTest.cpp  UtilTest.cpp
tests/schema-types/: CMakeLists.txt  README.md  main.cpp
